internal/static/css/navbar.css
.header * {
  margin: 0;
  padding: 0;
  box-sizing: border-box;
}

.header ul {
  list-style: none;
}

 a {
  text-decoration: none;
  color: inherit;
}

.header {
  text-wrap: nowrap;
  background-color: #0c0c0c;
  position: fixed;
  width: 100%;
  top: 0;
}

.header_content {
  display: flex;
  align-items: center;
  justify-content: center;
  padding: 0 30px;
  min-height: 90px;
}

.nav_list {
  display: flex;
  column-gap: 40px;
}

.nav_link {
  color: rgba(255, 255, 255, 0.75);
  font-size: 2.8rem;
  color: #57a6a1;
  transition: all color 0.4s;
}

.nav_link:hover {
  color: rgba(255, 255, 255, 1);
  font-size: 2.8rem;
}

.hamburger {
  display: none;
  cursor: pointer;
}

.bar {
  height: 2px;
  width: 27px;
  background: #fff;
  margin: 5px 0;
  opacity: 0.8;
}

.nav--open {
  transform: translate(0) !important;
}

.hamburger--open .bar:nth-child(1) {
  transform: translateY(7px) rotate(45deg);
}

.hamburger--open .bar:nth-child(2) {
  opacity: 0;
}

.hamburger--open .bar:nth-child(3) {
  transform: translateY(-7px) rotate(-45deg);
}

@media (max-width: 500px) {
  .nav {
    position: fixed;
    top: 60px;
    left: 0;
    background-color: rgb(19, 22, 26);
    width: 100%;
    padding: 10px 0 25px;
    transform: translateX(-100%);
  }

  .nav_list {
    flex-direction: column;
    align-items: center;
    row-gap: 20px;
  }

  .nav_link {
    font-size: 2.8rem;
  }

  .hamburger {
    display: block;
  }
}

